@@ -161,6 +161,10 @@ else
       LIBFTDI="-lftdi -lusb"
       AC_DEFINE([HAVE_LIBFTDI])
       AC_SUBST(LIBFTDI, $LIBFTDI)
+      AC_CHECK_DECL(TYPE_232H,[have_libftdi_FT232H=yes], [], [[#include <ftdi.h>]])
+      if test x$have_libftdi_FT232H = xyes; then
+         AC_DEFINE([HAVE_LIBFTDI_TYPE_232H])
+      fi
    fi
 fi
 AC_CHECK_HEADERS([pthread.h])
